designing viewport image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <main class="main-content">
         <h1 class="overlay-text">Welcome to My Portfolio</h1>
-        <img src="resources/images/backimage.jpg" alt="coding image">
+        <img class="main-img" src="resources/images/backimage.jpg" alt="coding image">
         <section>
             <h2>About Me</h2>
             <p>Hi, I'm a web developer with a passion for creating dynamic and responsive websites.</p>
@@ -26,7 +26,7 @@
             <h2>My Projects</h2>
             <table>
                 <tr class="img-row">
-                    <td><img src="resources/images/backimage.jpg" alt=""></td>
+                    <td><img src="resources/images/backimage.jpg" alt="" class="project-imgs"></td>
                 </tr>
                 <tr>
                     <td>
