--- a/index.html
+++ b/index.html
@@ -9,48 +9,91 @@
 <body>
     <header></header>
     <main class="main-content">
-        <h1 class="overlay-text">Welcome to My Portfolio</h1>
+        <h1>Welcome to My Portfolio</h1>
         <img class="main-img" src="resources/images/backimage.jpg" alt="coding image">
-        <section>
-            <h2>About Me</h2>
-            <p>Hi, I'm a web developer with a passion for creating dynamic and responsive websites.</p>
+        <section class="about-me">
+            <div class="about-container">
+                <div class="about-image">
+                    <img src="resources/images/paul.jpg" alt="About Me Photo">
+                </div>
+                <div class="about-content">
+                    <h2>About Me</h2>
+                    <p>Hello! I'm a passionate web developer with a love for creating elegant, user-friendly websites. I specialize in HTML, CSS, and JavaScript, and I'm constantly exploring new technologies to enhance user experiences.</p>
+                </div>
+            </div>
         </section>
-        <section>
+        <section class="education">
             <h2>Education</h2>
-            <p></p>
-            <a href="resources/CV Paul Siameto.pdf" target="_blanks">Download CV
-            </a>
+            <div class="education-card">
+                <div class="education-content">
+                    <h3>Bachelor of Science in Computer Science</h3>
+                    <p class="education-institute">University of Example</p>
+                    <p class="education-year">2019 – 2023</p>
+                    <p class="education-details">
+                        Focused on software development, algorithms, and web technologies. Completed capstone project on responsive web applications.
+                    </p>
+                </div>
+            </div>
+            <div class="education-card">
+                <div class="education-content">
+                    <h3>Bachelor of Science in Computer Science</h3>
+                    <p class="education-institute">University of Example</p>
+                    <p class="education-year">2019 – 2023</p>
+                    <p class="education-details">
+                        Focused on software development, algorithms, and web technologies. Completed capstone project on responsive web applications.
+                    </p>
+                </div>
+            </div>
+            <a href="resources/CV Paul Siameto.pdf" target="_blanks">Download CV</a>
         </section>
 
         <section>
             <h2>My Projects</h2>
-            <table>
-                <tr class="img-row">
-                    <td><img src="resources/images/backimage.jpg" alt="" class="project-imgs"></td>
-                </tr>
-                <tr>
-                    <td>
-                        <h3>
-                            Project 1
-                        </h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>
-                            This is a brief description of my project. It showcases my skills in web development
-                        </p>
-                    </td>
-                </tr>
-            </table>
+
+            <div class="project-card">
+                <img src="resources/images/backimage.jpg" alt="Project Image">
+                <div class="card-content">
+                    <h2>Portfolio Website</h2>
+                    <p>This is a responsive personal portfolio website showcasing my skills, projects, and contact info.</p>
+                    <a href="#" class="btn">View Project</a>
+                </div>
+            </div>
         </section>
 
         <section>
-            <h2>Intrests</h2>
+            <div class="interests-card">
+  <h3>My Interests</h3>
+  <ul class="interests-list">
+    <li> Web Development</li>
+    <li> UI/UX Design</li>
+    <li> Reading Tech Blogs</li>
+    <li> Gaming</li>
+    <li> Traveling</li>
+  </ul>
+</div>
+
         </section>
 
         <section>
             <h2>Contact Me</h2>
+            <form class="contact-form" action="#" method="post">
+    <div class="form-group">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" name="name" required>
+    </div>
+
+    <div class="form-group">
+      <label for="email">Your Email</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+
+    <div class="form-group">
+      <label for="message">Your Message</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+    </div>
+
+    <button type="submit" class="submit-btn">Send Message</button>
+  </form>
         </section>
     </main>
     <footer></footer>
