--- a/index.html
+++ b/index.html
@@ -40,22 +40,38 @@
             <h2>Education</h2>
             <div class="education-card">
                 <div class="education-content">
-                    <h3>Bachelor of Science in Computer Science</h3>
-                    <p class="education-institute">University of Example</p>
-                    <p class="education-year">2019 – 2023</p>
+                    <h3>Software Engineering</h3>
+                    <p class="education-institute">PLP</p>
+                    <p class="education-year">Current</p>
                     <p class="education-details">
-                        Focused on software development, algorithms, and web technologies. Completed capstone project on responsive web applications.
+                        Focused on software Engineering 
+                </div>
+            </div>
+            <div class="sec">
+                <div class="education-content">
+                    <h3>Diploma in Business Information Technology</h3>
+                    <p class="education-institute">KCA University</p>
+                    <p class="education-year">2021 - 2023</p>
+                    <p class="education-details">
+                        Focused on providing tech solutions to business problems.
                     </p>
                 </div>
             </div>
-            <div class="education-card sec">
+            <div class="education-card">
                 <div class="education-content">
-                    <h3>Bachelor of Science in Computer Science</h3>
-                    <p class="education-institute">University of Example</p>
-                    <p class="education-year">2019 – 2023</p>
+                    <h3>KCSE</h3>
+                    <p class="education-institute">Kakamega High School</p>
+                    <p class="education-year">2016 - 2019</p>
                     <p class="education-details">
-                        Focused on software development, algorithms, and web technologies. Completed capstone project on responsive web applications.
-                    </p>
+                        Focused on software Engineering 
+                </div>
+            </div>
+            <div class="sec">
+                <div class="education-content">
+                    <h3>KCPE</h3>
+                    <p class="education-institute">Ridgesview Academy</p>
+                    <p class="education-year">2005 - 2015</p>
+                    <p class="education-details"></p>
                 </div>
             </div>
             <a href="resources/CV Paul Siameto.pdf" target="_blanks">Download CV</a>
