--- a/index.html
+++ b/index.html
@@ -81,19 +81,21 @@
             <h2>My Projects</h2>
             <div class="project">
                 <div class="project-card">
-                    <img src="resources/images/backimage.jpg" alt="Project Image">
+                    <img src="resources/images/calculator.PNG" alt="Project Image">
                     <div class="card-content">
-                        <h2>Portfolio Website</h2>
-                        <p>This is a responsive personal portfolio website showcasing my skills, projects, and contact info.</p>
-                        <a href="#" class="btn">View Project</a>
+                        <h2>Calculator</h2>
+                        <p>This is a calculator that can parform basic arithmetic like addition, multiplication, division and Subtraction.</p>
+                        <a href="https://paul-siameto.github.io/Calculator/" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="resources/images/backimage.jpg" alt="Project Image">
+                    <img src="resources/images/color game.PNG" alt="Project Image">
                     <div class="card-content">
-                        <h2>Portfolio Website</h2>
-                        <p>This is a responsive personal portfolio website showcasing my skills, projects, and contact info.</p>
-                        <a href="#" class="btn">View Project</a>
+                        <h2>Color Game</h2>
+                        <p>Color Game provides a player with a color in RGB format e.g: RGB(0,0,0) and tiles with different colors. 
+                            The tiles can be 6 or 9, depending on the number selected by the player. The player is expected to choose 
+                            the tile matching the RGB color. If they do, they win.</p>
+                        <a href="https://paul-siameto.github.io/Color_Game/" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
