added social media links, project links, edited some cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">My Portfolio</div>
+        <div class="logo">Paul Siameto</div>
         <nav class="nav-menu">
             <a href="#home">Home</a>
             <a href="#about">About</a>
@@ -19,21 +19,41 @@
     </header>
     <main class="main-content">
         <div class="fullscreen-card">
-            <img src="resources/images/backimage.jpg" alt="Hero Background">
+            <img src="resources/images/mond2.PNG" alt="Hero Background">
             <div class="card-overlay">
                 <h1>PAUL SIAMETO</h1>
                 <p>This layout is fully responsive and scrollable on all devices.</p>
-                <button class="btn"><a href="resources/CV Paul Siameto.pdf" target="_blanks">Download CV</a></button>
+                <button class="btn"><a href="resources/CV Paul Siameto.pdf" target="_blanks"></a>Download CV</button>
+                <button class="btn"><a href="https://github.com/Paul-Siameto"></a>Github</button>
             </div>
         </div>
         <section class="about-me" id="about">
+            <h2>About Me</h2>
             <div class="about-container">
                 <div class="about-image">
                     <img src="resources/images/paul.jpg" alt="About Me Photo">
                 </div>
+
                 <div class="about-content">
-                    <h2>About Me</h2>
-                    <p>Hello! I'm a passionate web developer with a love for creating elegant, user-friendly websites. I specialize in HTML, CSS, and JavaScript, and I'm constantly exploring new technologies to enhance user experiences.</p>
+                    <p>Hello! I'm a passionate web developer with a love for creating elegant, user-friendly websites. I specialize in HTML, CSS, JavaScript PHP(laravel) and MySQL.
+                        I'm currently pursuing Software Engineering at PLP, with an interest in MERN stack development.
+                    </p>
+                </div>
+                <div class="about-content">
+                    <h2>Skills</h2>
+                    <p><h3>Front-end</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <h3>Back-end</h3>
+                        <ul>
+                            <li>PHP</li>
+                            <li>MySQL</li>
+                            <li>Git</li>
+                            <li>Github</li>
+                    </p>
                 </div>
             </div>
         </section>
@@ -48,7 +68,7 @@
                         Focused on software Engineering 
                 </div>
             </div>
-            <div class="sec">
+            <div class="education-card">
                 <div class="education-content">
                     <h3>Diploma in Business Information Technology</h3>
                     <p class="education-institute">KCA University</p>
@@ -63,11 +83,9 @@
                     <h3>KCSE</h3>
                     <p class="education-institute">Kakamega High School</p>
                     <p class="education-year">2016 - 2019</p>
-                    <p class="education-details">
-                        Focused on software Engineering 
                 </div>
             </div>
-            <div class="sec">
+            <div class="education-card">
                 <div class="education-content">
                     <h3>KCPE</h3>
                     <p class="education-institute">Ridgesview Academy</p>
@@ -85,7 +103,8 @@
                     <div class="card-content">
                         <h2>Calculator</h2>
                         <p>This is a calculator that can parform basic arithmetic like addition, multiplication, division and Subtraction.</p>
-                        <a href="https://paul-siameto.github.io/Calculator/" class="btn">View Project</a>
+                        <a href="https://paul-siameto.github.io/Calculator/" class="btn">View Live</a>
+                        <a href="https://paul-siameto.github.io/Calculator/" class="btn">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -95,36 +114,38 @@
                         <p>Color Game provides a player with a color in RGB format e.g: RGB(0,0,0) and tiles with different colors. 
                             The tiles can be 6 or 9, depending on the number selected by the player. The player is expected to choose 
                             the tile matching the RGB color. If they do, they win.</p>
-                        <a href="https://paul-siameto.github.io/Color_Game/" class="btn">View Project</a>
+                        <a href="https://paul-siameto.github.io/Color_Game/" class="btn">View Live</a>
+                        <a href="https://paul-siameto.github.io/Calculator/" class="btn">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="resources/images/backimage.jpg" alt="Project Image">
+                    <img src="resources/images/mont design.PNG" alt="Project Image">
                     <div class="card-content">
-                        <h2>Portfolio Website</h2>
-                        <p>This is a responsive personal portfolio website showcasing my skills, projects, and contact info.</p>
-                        <a href="#" class="btn">View Project</a>
+                        <h2>Mondrian</h2>
+                        <p>This is an artwork designed using onlyCSS and HTML</p>
+                        <a href="https://paul-siameto.github.io/Mondrian-project/" class="btn">View Live</a>
+                        <a href="https://github.com/Paul-Siameto/Mondrian-project.git" class="btn">View Repo</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="resources/images/backimage.jpg" alt="Project Image">
+                    <img src="resources/images/github-logo.jpg" alt="Project Image">
                     <div class="card-content">
-                        <h2>Portfolio Website</h2>
-                        <p>This is a responsive personal portfolio website showcasing my skills, projects, and contact info.</p>
-                        <a href="#" class="btn">View Project</a>
+                        <h2>Github</h2>
+                        <p>Check out my Github for more projects. I have undeployed projects that I'm currently working on.</p>
+                        <a href="https://github.com/Paul-Siameto" class="btn">More Repos</a>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="interests">
+            <h2>My Interests</h2>
             <div class="interests-card">
-                <h3>My Interests</h3>
                 <ul class="interests-list">
+                    <li> Networking</li>
+                    <li> Learning New Skills</li>
                     <li> Web Development</li>
-                    <li> UI/UX Design</li>
-                    <li> Reading Tech Blogs</li>
-                    <li> Gaming</li>
+                    <li> Playing Guitar</li>
                     <li> Traveling</li>
                 </ul>
             </div>
@@ -132,17 +153,25 @@
         </section>
 
         <section class="contact" id="contact">
+            <h2>Get In Touch</h2>
+            <div class="main-contact">
             <div class="contact-info">
-                <h2>Contact Me</h2>
                 <div>
+                    <img src="resources/images/telephone-call.png" alt="">
                     <h3>Call me</h3>
                     <p>+254 111387596</p>
                 </div>
                 <div>
+                    <img src="resources/images/location.png" alt="">
+                    <h3>Location</h3>
+                    <p>Nairobi, Kenya</p>
+                </div>
+                <div>
+                    <img src="resources/images/email.png" alt="">
                     <h3>Email</h3>
                     <p>siametopaul2@gmail.com</p>
             </div>
-            <div class="c-form">
+            <div class="contact-info">
             <form class="contact-form" action="messages.html" method="post">
                 <div class="form-group">
                     <label for="name">Your Name</label>
@@ -162,19 +191,26 @@
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
             </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-content">
-    <p>&copy; 2025 Paul Siameto. All rights reserved.</p>
-    <div class="footer-links">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#education">Education</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </div>
-  </div>
+            <div class="footer-links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#education">Education</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="footer-social">
+                <a href="https://www.linkedin.com/in/paul-siameto-519b91244/"><img src="resources/images/linkedin.png" alt=""></a>
+                <a href="https://www.facebook.com/paul.suiyanka.94"><img src="resources/images/facebook.png" alt="facebook icon"></a>
+                <a href="https://x.com/PaulS7132"><img src="resources/images/twitter.png" alt=""></a>
+                <a href="https://github.com/Paul-Siameto"><img src="resources/images/github.png" alt=""></a>
+            </div>
+            <p>&copy; 2025 Paul Siameto. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
