--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <img src="resources/images/mond2.PNG" alt="Hero Background">
             <div class="card-overlay">
                 <h1>PAUL SIAMETO</h1>
-                <p>This layout is fully responsive and scrollable on all devices.</p>
                 <button class="btn"><a href="resources/CV Paul Siameto.pdf" target="_blanks"></a>Download CV</button>
                 <button class="btn"><a href="https://github.com/Paul-Siameto"></a>Github</button>
             </div>
@@ -40,14 +39,14 @@
                     </p>
                 </div>
                 <div class="about-content">
-                    <h2>Skills</h2>
-                    <p><h3>Front-end</h3>
+                    <h3>Skills</h3>
+                    <p><h4>Front-end</h4>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
                         </ul>
-                        <h3>Back-end</h3>
+                        <h4>Back-end</h4>
                         <ul>
                             <li>PHP</li>
                             <li>MySQL</li>
@@ -166,7 +165,7 @@
                     <h3>Location</h3>
                     <p>Nairobi, Kenya</p>
                 </div>
-                <div>
+                <div class="email">
                     <img src="resources/images/email.png" alt="">
                     <h3>Email</h3>
                     <p>siametopaul2@gmail.com</p>
@@ -194,6 +193,7 @@
             </div>
         </section>
     </main>
+    <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-links">
