download cv update

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <img src="resources/images/mond2.PNG" alt="Hero Background">
             <div class="card-overlay">
                 <h1>PAUL SIAMETO</h1>
-                <button class="btn"><a href="resources/CV Paul Siameto.pdf" target="_blanks"></a>Download CV</button>
-                <button class="btn"><a href="https://github.com/Paul-Siameto"></a>Github</button>
+                <a href="resources/CV Paul Siameto.pdf" target="_blanks"><button class="btn">Download CV</button></a>
+                <a href="https://github.com/Paul-Siameto"><button class="btn">Github</button></a>
             </div>
         </div>
         <section class="about-me" id="about">
