--- a/index.html
+++ b/index.html
@@ -37,23 +37,21 @@
                     <p>Hello! I'm a passionate web developer with a love for creating elegant, user-friendly websites. I specialize in HTML, CSS, JavaScript PHP(laravel) and MySQL.
                         I'm currently pursuing Software Engineering at PLP, with an interest in MERN stack development.
                     </p>
+                    <div class="skills-section">
+                        <h3>My Skills</h3>
+                            <div class="card-grid">
+                                <div class="skill-card">HTML</div>
+                                <div class="skill-card">CSS</div>
+                                <div class="skill-card">JavaScript</div>
+                                <div class="skill-card">PHP</div>
+                                <div class="skill-card">Laravel</div>
+                                <div class="skill-card">MySQL</div>
+                                <div class="skill-card">Git</div>
+                                <div class="skill-card">GitHub</div>
+                            </div>
+                        </div>
                 </div>
-                <div class="about-content">
-                    <h3>Skills</h3>
-                    <p><h4>Front-end</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                        </ul>
-                        <h4>Back-end</h4>
-                        <ul>
-                            <li>PHP</li>
-                            <li>MySQL</li>
-                            <li>Git</li>
-                            <li>Github</li>
-                    </p>
-                </div>
+                    
             </div>
         </section>
         <section class="education" id="education">
